<resources>
    <string name="app_name">Amov_22_23</string>
    <string name="mode1">Mode 1</string>
    <string name="mode2">Mode 2</string>
    <string name="name">Name: %s</string>
    <string name="btn_choose_photo">Choose Photo</string>
    <string name="btn_take_photo">Camera</string>
    <string name="msg_status">Status</string>
    <string name="msg_email">E-mail:</string>
    <string name="msg_email_address">E-mail address</string>
    <string name="msg_password">Password:</string>
    <string name="hint_password">Password</string>
    <string name="btn_createAccount">Create account</string>
    <string name="btn_logout">Logout</string>
    <string name="msg_data_status" translatable="false">Data status</string>
    <string name="btn_add_new_data">Add new data</string>
    <string name="btn_update_data">Update data</string>
    <string name="btn_observe_data">Observe data</string>
    <string name="btn_remove_data">Remove data</string>
    <string name="App_Title">Cerbrus</string>
    <string name="AppInfoTakes">Got what it takes?</string>
    <string name="GameNextLevelTimer" translatable="false">5</string>
    <string name="Pontos">Points: %d</string>
    <string name="Tempo">Time: %d</string>
    <string name="server_mode">Server</string>
    <string name="error_address">Address not recognized</string>
    <string name="button_connect">Connect</string>
    <string name="ask_ip">Server IP address:</string>
    <string name="button_cancel">Cancel</string>
    <string name="my_wins">My wins:</string>
    <string name="other_wins">Other wins:</string>
    <string name="total_games">Total games:</string>
    <string name="msg_ip_address">Waiting for all Clients…</string>
    <string name="btn_emulator">Connect to Emulator</string>
    <string name="waiting_for_host_to_start">Waiting for host to start</string>
    <string name="waiting_for_all_players">Waiting for all players</string>
    <string name="add_score_to_firebase">Add Score to firebase</string>
    <string name="play_again">Play Again</string>
    <string name="btn_signIn">Sign In</string>
    <string name="GameNextLevel">Next level in:</string>
    <string name="client_mode">Client Mode</string>
    <string name="time">Time:</string>
    <string name="menu_inicial">Start Menu</string>
    <string name="singlescores" translatable="false">Singleplayer Scores</string>
    <string name="multiscores" translatable="false">Multiplayer Scores</string>
    <string name="save">Save</string>
    <string name="gallery">Gallery</string>
    <string name="you_lost">You Lost!</string>
    <string name="returnMenu">Return</string>

    <!--<string name="timeleaderboard">Time:%d</string>
    <string name="pontosleaderboard">Pontos:%d</string>-->
</resources>