<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/leaderboardimg"
            android:src="@android:drawable/ic_dialog_map"
            android:layout_width="64dp"
            android:layout_gravity="center"
            android:layout_height="64dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/leaderboardusername"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/leaderboarduserpontos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="4dp"
                    android:text="@string/Pontos"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/leaderboardusertime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="4dp"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:background="#FFFFFF">
        <ImageView
            android:id="@+id/leaderboardimg"
            android:src="@android:drawable/ic_dialog_map"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:textStyle="bold"
            android:padding="4dp"
            android:textSize="15sp"
            android:text="username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/leaderboardusername"
            android:textColor="#000000"
            android:background="#FFFFFF"/>

            <TextView
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="10sp"
                android:text="Time:"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/leaderboardusertime"
                android:textColor="#000000"
                android:background="#FFFFFF"/>
            <TextView
                android:textStyle="bold"
                android:padding="4dp"
                android:textSize="10sp"
                android:text="Pontos:"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:id="@+id/leaderboarduserpontos"
                android:textColor="#000000"
                android:background="#FFFFFF"/>

        </LinearLayout>-->


</FrameLayout>