<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mode1Activity">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameNextLevel"
        android:textSize="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <Button
        android:id="@+id/btn_addFirestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="Add Firestore"
        app:layout_constraintBottom_toTopOf="@+id/btn_MenuInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/btn_MenuInicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Menu Inicial"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_addFirestore"></Button>

    <TextView
        android:id="@+id/NextLevelTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameNextLevelTimer"
        android:textSize="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timertitle"></TextView>

    <pt.isec.a2019133504.amov_22_23.View.BoardView
        android:id="@+id/boardGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        tools:ignore="MissingConstraints" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <TextView
            android:id="@+id/InfoPontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pontos"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/InfoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textSize="40dp" />

        <!--<TextView
            android:id="@+id/InfoPontos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />-->

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>